--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -211,7 +211,7 @@
             </a>
         </li>
         <li>
-            <a href="http://weizhong.yimei.cn/home/user/index">
+            <a href="{:U('User/login')}">
                 <img src="__PUBLIC__/index/image/icon4.png" class="f-img2">
                 <p>我的</p>
             </a>
