--- a/App/Home/View/User/login.html
+++ b/App/Home/View/User/login.html
@@ -35,7 +35,7 @@
             </li>
             <li>
                 <div class="clearfix">
-                    <a href="http://weizhong.yimei.cn/home/login/editpass">  <span class="log-span1 fl">忘记密码?</span></a>
+                    <a href={:U('home/user/gai')}>  <span class="log-span1 fl">忘记密码?</span></a>
                     <a href="{:U('registe')}" class="fr"><span class="log-span2">注册账号</span></a>
                 </div>
             </li>
