--- a/App/Home/View/User/login.html
+++ b/App/Home/View/User/login.html
@@ -36,7 +36,7 @@
             <li>
                 <div class="clearfix">
                     <a href={:U('home/user/gai')}>  <span class="log-span1 fl">忘记密码?</span></a>
-                    <a href="{:U('registe')}" class="fr"><span class="log-span2">注册账号</span></a>
+                    <a href="{:U('user/registe')}" class="fr"><span class="log-span2">注册账号</span></a>
                 </div>
             </li>
         </ul>
