--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -167,7 +167,7 @@
                                 <p class="tb-p3">当前价:{$auc_info['success_price']}元</p>
                                 <div class="clearfix">
                                     <span class="tb-span1">{$auc_info['success_times']}次出价</span>
-                                    <div class="tb-div2 bc-grey fr"><if condition="$auc_info['status'] eq 0" > {$auc_info['start_time']|date="H:i:s",###} <else />正在进行</if> </div>
+                                    <div class="tb-div2 bc-grey fr"><if condition="$auc_info['status'] eq 0" > {$auc_info['start_time']|date="H:i:s",###} <elseif condition="$auc_info['status'] eq 1" />正在进行<else />已结束</if> </div>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
 </ul>
 <div class="f-dj"></div>
 <div class="footer">
-    <ul class="clearfix f-ul">
+    <ul class="clearfix f-ul" >
         <li class="current">
             <a href="/">
                 <img src="__PUBLIC__/index/image/icon1h.png" class="f-img2">
@@ -210,12 +210,13 @@
                 <p>参拍</p>
             </a>
         </li>
+        <a href="{:U('User/login')}">
         <li>
-            <a href="{:U('User/login')}">
+
                 <img src="__PUBLIC__/index/image/icon4.png" class="f-img2">
                 <p>我的</p>
-            </a>
         </li>
+            </a>
     </ul>
 </div>
 
@@ -267,7 +268,7 @@
                          time2 += change(date1.getMinutes()) + ":";
                          time2 += change(date1.getSeconds());
                     var tmp_id = data['data'][i]['id'];
-                    str += '<a href="{:U(\'AuctionShop/showShop\',array(\'id\'=>' + tmp_id +'))}">';
+                    str += '<a href="/index.php/Home/AuctionShop/showShop/id/' + tmp_id + '.html">';
                     str += '<li style="border-bottom: 1px solid #e0e0e0;padding: 0.15rem 0.23rem 0.28rem;">'
                     str += '<div class="clearfix">';
                     str += '<img src='+ data['data'][i]['thumbnail'] +' class="tb-img1 fl">';
