--- a/App/Qwadmin/View/User/form.html
+++ b/App/Qwadmin/View/User/form.html
@@ -67,7 +67,7 @@
                                     <input type="text" name="phone_num"  placeholder="客户名称"
                                            onblur="leavefuc1()"    class="col-xs-10 col-sm-5" value="{$user['phone_num']}">
                                     <span  class="help-inline col-xs-12 col-sm-7">
-												<span class="middle">一个手机号只能注册一次</span>
+												<span class="middle">一个手机号只能注册一次,如果不修改，点击消失了，直接刷新就行了，手机号不会修改</span>
 											</span>
                                 </div>
                             </div>
@@ -148,9 +148,9 @@
                                     状态 </label>
                                 <div class="col-sm-9">
                                     <select  name="status" class="col-xs-10 col-sm-5">
-                                        <option value="0">审核</option>
-                                        <option value="1">正常</option>
-                                        <option value="2">禁用</option>
+                                        <option value="0" <if condition="$user['status'] eq 0">selected="selected"</if> >审核</option>
+                                        <option value="1" <if condition="$user['status'] eq 1">selected="selected"</if>>正常</option>
+                                        <option value="2" <if condition="$user['status'] eq 2">selected="selected"</if>>禁用</option>
 
                                     </select>
 
