--- a/App/Home/View/User/mgai.html
+++ b/App/Home/View/User/mgai.html
@@ -26,7 +26,7 @@
             <ul class="aa-ul1">
                 <li class="clearfix">
                     <span class="ri-span1 fl">姓名</span>
-                    <input type="text" name="name" value="你很帅" placeholder="请输入昵称" required="" class="aa-input1 fr">
+                    <input type="text" name="name" value={$data['name']} placeholder="请输入昵称" required="" class="aa-input1 fr">
                 </li>
 
             </ul>
