--- a/App/Home/View/User/setup.html
+++ b/App/Home/View/User/setup.html
@@ -34,7 +34,7 @@
 
     </li>
     </a>
-    <a href="http://weizhong.yimei.cn/home/singlepage/agreement">
+    <a href={:U('home/personal/service')}>
     <li class="clearfix">
             <img src="__PUBLIC__/huser/setup/logo15.png" class="c-img2 fl">
             <span class="s-span1 fl">服务协议</span>
