--- a/App/Home/View/User/geren.html
+++ b/App/Home/View/User/geren.html
@@ -21,12 +21,12 @@
 
 <div class="header">
 	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/huser/geren/back1.png" class="h-img1"></a>
-	  我的	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/huser/geren/help.png" class="h-img"></a>
+	  我的	<a href={:U('home/user/1')}><img src="__PUBLIC__/huser/geren/help.png" class="h-img"></a>
 </div>
 <a href={:U('home/Personal/info')}>
 <div class="p-div1 clearfix">
 
-    <img src="__PUBLIC__/huser/geren/headicon.png" class="p-img1 fl">
+    <img src={$user['thumb']} class="p-img1 fl">
     <div class="d-div2 fl">
         <p class="d-p1">{$user['name']}</p>
         <p class="d-p2">积分:{$user['point']}</p>
@@ -71,7 +71,7 @@
             <img src="__PUBLIC__/huser/geren/logo2.png" class="p-img5 fr">
     </li>
     </a>
-    <a href="http://weizhong.yimei.cn/home/address/index">
+    <a href={:U('home/address/lists')}>
     <li class="clearfix">
             <img src="__PUBLIC__/huser/geren/logo8.png" class="p-img4 fl">
             <span class="p-span1">收货信息</span>
@@ -104,7 +104,7 @@
 <div class="footer">        
         <ul class="clearfix f-ul">
             <li class="current">
-                <a href="http://weizhong.yimei.cn/home/index/index">
+                <a href={:U('home/index/index')}>
                                             <img src="__PUBLIC__/huser/geren/icon1.png" class="f-img2">
                         <p>首页</p>
                                         
