--- a/App/Home/View/User/info.html
+++ b/App/Home/View/User/info.html
@@ -21,7 +21,7 @@
 </script>
 
 <div class="header">
-	<a onclick="javascript:history.back(-1);"><img src="__PUBLIC__/info/back1.png" class="h-img1"></a>
+	<a href={:U('user/geren')} ><img src="__PUBLIC__/info/back1.png" class="h-img1"></a>
 	  个人信息	<a href="http://weizhong.yimei.cn/home/singlepage/newhand"><img src="__PUBLIC__/info/help.png" class="h-img"></a>
 </div>
 
@@ -31,7 +31,7 @@
     </form>
     <span class="ppi-span1">头像</span>
     <img src="__PUBLIC__/info/logo2.png" class="ppi-img2 fr">
-    <img src="__PUBLIC__/info/headicon.png" class="ppi-img1 fr" id="tx">
+    <img src={$data['thumb']} class="ppi-img1 fr" id="tx">
 </div>
 
 <ul class="ppi-ul1">
@@ -39,7 +39,7 @@
     <li class="clearfix">
         <span class="ppi-span1 fl">昵称</span>
         <img src="__PUBLIC__/info/logo2.png" class="p-img5 fr">
-        <span class="ppi-span2 fr">你很帅</span>
+        <span class="ppi-span2 fr">{$data['name']}</span>
     </li>
     </a>
     <li class="clearfix">
@@ -53,32 +53,37 @@
         $('#avatar').click();      
     })
      $("#avatar").change(function(evt){         
-        var data = new FormData($('#form1')[0]); 
+        var data = new FormData($('#form1')[0]);
         console.log(data);
         $.ajax({  
-            url: "/home/user/uploadavatar",  
+            url: "{:U('home/personal/img')}",
             type: 'POST',  
             data: data,  
             dataType: 'JSON',  
             cache: false,  //cache属性是flase（默认值）时：每次读取的是最新的数据。
             processData: false, //默认为false，当设置为true的时候,jquery ajax 提交的时候不会序列化 data，而是直接使用data 
             contentType: false,//
-            beforeSend:function(data){
-                //$(".hideimg").show();
-                // console.log(data);//打印输出
-            },
             success: function(data){
                 //$(".hideimg").hide();
-                // console.log(data);
-                // console.log(data.data);
+                console.log(data);
 
-                var avatar = data.data;
-                console.log(avatar);
 
-                $("#tx").attr('src', avatar);
             }
         });
-    }); 
+    });
+
+    $("#avatar").change(function(e) {
+        for (var i = 0; i < e.target.files.length; i++) {
+            var file = e.target.files.item(i);
+            var freader = new FileReader();
+            freader.readAsDataURL(file);
+            freader.onload = function(e) {
+                var src = e.target.result;
+                $("#tx").attr("src",src);
+            }
+        }
+    });
+
 </script>
 
 
