--- a/App/Home/View/User/geren.html
+++ b/App/Home/View/User/geren.html
@@ -36,7 +36,7 @@
 </a>
 <div class="p-div3">
     <ul class="p-ul1 clearfix">
-        <a href="http://weizhong.yimei.cn/home/user/myorder">
+        <a href="{:U('Order/orders')}">
         <li>
                 <img src="__PUBLIC__/huser/geren/logo3.png" class="p-img3">
                 <p class="d-p3">我的订单</p>
