--- a/App/Home/View/Order/orders.html
+++ b/App/Home/View/Order/orders.html
@@ -66,6 +66,7 @@
             <li class="">
         <ul class="mo-ul1">
             <volist name="total" id="order">
+            <if condition="$total['status'] eq 0"><a href="{:U('Order/oneStep',array('bianhao'=>$total['bianhao'],'shop_price'=>$total['shop_price']))}"><else /><a></if>
             <li style="border-bottom: 1px solid #e0e0e0;padding: 0.15rem 0.23rem 0.28rem;">
                 <div class="clearfix">
                     <img src="{$order.pic}" class="tb-img1 fl">
@@ -79,6 +80,7 @@
                     </div>
                 </div>
             </li>
+                </a>
             </volist>
 
                     </ul>
