--- a/App/Home/View/Order/oneStep.html
+++ b/App/Home/View/Order/oneStep.html
@@ -18,7 +18,7 @@
     <div class="row" style="margin:15px; 0;">
         <div class="col-md-12">
 
-            <a href={:U('Order/address',array('id'=>$data['id']))}>
+            <a href={:U('Order/address',array('id'=>$id))}>
                 <div class="bp-div5 clearfix">
                     <div class="clearfix">
                         <input type="hidden" id="address_id" name="address_id" value="{$address['id']}" class="info">
@@ -67,20 +67,49 @@
                 </tbody>
             </table>
 
-            <form class="form-inline" method="post" action="{$tjurl}    ">
-                <?php
-                foreach ($native as $key => $val) {
-                echo '<input type="hidden" name="' . $key . '" value="' . $val . '">';
-                }
-                ?>
-                <button type="submit" class="btn btn-success btn-lg">扫码支付</button>
-            </form>
+
         </div>
+        <form class="col-md-6"  style="float:left" method="post" action="{$tjurl}">
+            <?php
+                foreach ($native as $key => $val) {
+            echo '<input type="hidden" name="' . $key . '" value="' . $val . '">';
+            }
+            ?>
+            <button type="submit" class="btn btn-success btn-lg">扫码支付</button>
+        </form>
+
+            <input type="hidden" name="id" value="{$id}" >
+            <button  id="yu_e" class="btn btn-info btn-lg">余额支付</button>
     </div>
 </div>
-<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src="__PUBLIC__/order/ajaxForm.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/jquery-2.1.4.min.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/jquery.noty.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/center.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/inline.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/default.js.下载"></script>
+<script type="text/javascript" src="__PUBLIC__/order/jquery.noty.packaged.js.下载"></script>
+<script>
+    $('#yu_e').click(function () {
+        var id = $("input[name='id']").val();
+        var address_id = $("input[name='address_id']").val();
+        alert(address_id);
+        alert(id);
+        $.post("{:U(\"Order/yu_e\")}",{id:id,address_id,address_id},function(data){
+                if(data['code'] == 1)
+                {
+                    noty({text: data['msg'], layout: "center",type: 'error',timeout: 1500});
+                }else{
+                    noty({text: data['msg'], layout: "center",type: 'success',timeout: 1500});
+
+                }
+        });
+
+       // $.post()
+    });
+</script>
 </body>
 </html>
