--- a/App/Home/View/AuctionShop/showShop.html
+++ b/App/Home/View/AuctionShop/showShop.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 
-<body>
+<body onload="remind()">
 <div class="" id="load"></div>
 <script>
     window.onload = function() {
@@ -185,10 +185,10 @@
     </div>
 </div>
 
-<input type="hidden" name="" id="add_price" value="{$auction.additional_shot_range}">
+<input type="hidden" name="" id="add_price" value="{$auction['additional_shot_range']}">
 <input type="hidden" name="" id="bidding_price" value="{$auction.start_price}">
 <input type="hidden" name="" id="url" value="{:U('add_bid')}">
-<input type="hidden" name="" id="res" value="2">
+<input type="hidden" name="" id="res" value="0">
 <input type="hidden" name="id" value="{$auction.id}">
 <input type="hidden" name="status" value="{$auction.status}" >
 <input type="hidden" name="success_price" value="{$auction.success_price}" >
@@ -271,7 +271,8 @@
                 if(data.data == 0){
                     $('.bond,.bid-div_2').toggle();
                 }else if(data.data == 1){
-                    noty({text: data['msg'], layout: "center",type: 'error',timeout: 4000});
+                    // noty({text: data['msg'], layout: "center",type: 'error',timeout: 4000});
+                    $("#res").val(1);
                 }else if(data.data == 2){
                     var add_price = $('#add_price').val();
                     var bidding_price =  $('input[name="success_price"]').val();
@@ -409,10 +410,10 @@
 
                     if (data[0] == undefined){
                         var cc = $("#bidding_price").val();
-                        $('#bidding_price').val(cc);
+                        $('input[name="success_price"]').val(cc);
                     }else{
 
-                        $('#bidding_price').val(data[0]['price']);
+                        $('input[name="success_price"]').val(data[0]['price']);
                     }
 
                     if(data[0] == undefined){
@@ -522,8 +523,9 @@
 
                 $('#loading').html("");
                 //var auction_id = 4565;
+
                 //$.get("/home/bidding/setmemcache", { auction_id: auction_id},function(){
-                if(data['error'] =1){
+                if(data['error'] ==1||data['code'] == 2){
 
                 noty({text: data['msg'], layout: "center", type: 'error', timeout: 1400});
                 }else{
@@ -542,8 +544,10 @@
                 }
 
 
+
                 $(_self).prop("disabled",false);
                 // setTimeout('window.location="' + data['url'] + '"', 1400);
+                // setTimeout('window.location.reload(), 1400);
                 //});
             },
             error:function(data){
